added new delivery thread